Rename the DCB query DSL to criteria and make tags a first-class type (#276)
* Rename the DCB query DSL to criteria and make tags a first-class type

Rename DcbQuery -> DcbCriteria and DcbQueryItem -> DcbCriterion, and replace
bare-string DCB tags with a Tag(key, value) record (Tag.of/canonical/parse,
split-on-first-colon so a value may contain ':'). The stored dcbtags wire form
is unchanged: Tag.canonical() is the same key:value string, newline-joined and
sorted, and the Mongo dcbTags index array and tag: markers still hold canonical
strings. Add a mapper-bound DcbCriteriaBuilder in dcb-dsl-common so callers can
build criteria from domain event Class objects, resolved through the same
CloudEventTypeMapper used at write time (never Class.getName()); a read-matches-
write test guards that. The @DcbSubscription tagsAllOf attribute stays String[]
and is parsed into Tags at startup, failing fast with the subscription id on a
malformed tag.

DCB is unreleased, so no deprecation shim and no stored-format change. Also
fixes a pre-existing break in the word-guessing DCB example: Bootstrap.kt
imported the removed SpringMongoEventStoreCapability from #268's rename,
corrected to EventStoreCapability.DCB.

See ADR 0047. Full build green on Java 21.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* Fix stale null-check message and a latent Tag.parse bug from Copilot review

DcbSubscriptionModelAdapter's null-check messages still said 'Query cannot be
null' after the DcbQuery -> DcbCriteria rename; updated to 'Criteria cannot be
null' in both the blocking and reactor adapters.

The characterization test's tagsForTestEvent() TagGenerator parsed
event.subject() as a key:value tag string via Tag.parse(...), but subject
values in this test are plain strings with no colon. If this generator's
tags() were ever actually invoked it would throw. Build a Tag directly with
Tag.of("subject", event.subject()) instead.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

-------